--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: swift-actions/setup-swift@v1
     - name: Build
-      run: swift build -v
+      run: cd SmartSpeakerBackend && swift build -v
     - name: Run tests
       run: swift test -v
