--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: swift-actions/setup-swift@v1
+    - uses: actions/checkout@v3 swift-actions/setup-swift@v1
     - name: Build
-      run: cd SmartSpeakerBackend && swift build -v
+      run: swift build -v
     - name: Run tests
       run: swift test -v
