--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v3 swift-actions/setup-swift@v1
+    - uses: actions/checkout@v3, swift-actions/setup-swift@v1
     - name: Build
       run: swift build -v
     - name: Run tests
